// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OutlineButton /> primary renders correctly 1`] = `
.c0 {
  background-color: transparent;
  border-color: #E40000;
  -webkit-transition: none;
  transition: none;
}

.c0:not(:hover) {
  color: #E40000;
}

.c0:hover:not(:disabled) {
  background-color: #E40000;
  border-color: #E40000;
}

.c0:disabled {
  color: #999999;
  border-color: #999999;
}

<Button
  blacklist={
    Array [
      "buttonStyle",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "color",
      "bg",
      "boxShadow",
      "primary",
      "rounded",
      "block",
    ]
  }
  buttonStyle="default"
  className="c0"
  primary={true}
>
  Hello world
</Button>
`;

exports[`<OutlineButton /> renders correctly 1`] = `
.c0 {
  background-color: transparent;
  -webkit-transition: none;
  transition: none;
}

.c0:disabled {
  color: #999999;
  border-color: #999999;
}

<Button
  blacklist={
    Array [
      "buttonStyle",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "color",
      "bg",
      "boxShadow",
      "primary",
      "rounded",
      "block",
    ]
  }
  buttonStyle="default"
  className="c0"
>
  Hello world
</Button>
`;

exports[`<OutlineButton /> rounded renders correctly 1`] = `
.c0 {
  background-color: transparent;
  -webkit-transition: none;
  transition: none;
}

.c0:disabled {
  color: #999999;
  border-color: #999999;
}

<Button
  blacklist={
    Array [
      "buttonStyle",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "color",
      "bg",
      "boxShadow",
      "primary",
      "rounded",
      "block",
    ]
  }
  buttonStyle="default"
  className="c0"
  rounded={true}
>
  Hello world
</Button>
`;
